<resources>
    <string name="app_name">AndroidAuth</string>
    <string name="clear_button_text">Clear</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="invalid_creds_toast_msg">Credentials are invalid</string>
    <string name="invalid_username_error_msg">invalid username</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="change_creds_button_text">change creds</string>
    <string name="creds_updated_msg">Credentials updated outside Smart Lock.</string>
    <string name="text_description">Place fingerprint on the Home button</string>
    <string name="description_unsupported">Your device doesn\'t support fingerprint sensor</string>
    <string name="description_enable_fingerprint">Please enable the fingerprint permission</string>
    <string name="description_register_fingerprint">No fingerprint configured, please register at least one fingerprint in your device\'s Settings.</string>
    <string name="description_enable_lockscreen">Please enable lockscreen security in your device\'s Settings</string>
    <string name="description_fingerprint_unavailable">Device doesn\'t support Fingerprint authentication</string>
</resources>
